index.css
* {
    margin: 0;
    padding: 0;
    font-family: lato;
  }
  
  /* Navbar */
  .bar {
    font-size: 40px !important;
    color: #fff;
    padding: 10px;
  }
  .navbar {
    background-color: #000 !important;
  }
  
  /* Button */
  .button {
    background-color: #fff;
    border-color: #fff;
    border-radius: 25px;
    color: #000;
    font-weight: 200;
    padding: 20px;
    margin: 5% 34.4%;
    margin-top: 7%;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 24px;
    border-width: 2px;
  }
  
  /* Header */
  .header {
    color: #fff;
    margin: 0.5em;
    padding-top: px;
    background-color: #000;
  
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 80%;
  }
  /* Figure out how to change the image with javascript 2 lines below */
  .first {
    background-image: url(images/background8.png); 
    width: 100%;
    height: 100%;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    display: block;
  
  }
  .top {
    background-color: rgba(1, 1, 1, 0.25) !important;
    color: #fff;
    font-size: 50px;
    font-weight: bold;
    height: 750px;
    padding-top: 10%;
    padding-left: 25%;
    padding-right: 25%;
  }
  
  /* Below the image */
  .main {
    padding-left: 28%;
    padding-right: 28%;
    padding-bottom: 0%;
    background-color: #000;
    color: #fff;
  }
  .content {
    justify-content: center;
  }
  .large {
    font-size: 42px;
    text-align: center;
    padding-bottom: 10px;
  }
  .small {
    font-size: 24px;
    text-align: left;
  }
  
  /* Footer */
  .footer {
    background-color: #000;
    height: 70px;
    text-align: center;
    align-items: center;
    font-size: 15px;
    color: #fff;
    display: flex;
    justify-content: left;
    /* position: fixed; */
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1030;
  }
  .footer-item {
    padding-right: 20px;
    padding-left: 20px;
    background-color: #000;
  }
  p {
    margin-bottom: 0%;
  }


/* Edit these later */
/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

/* Mobile Styles */
@media (max-width: 400px) {
.responsive-main {
    padding-left: 0%;
    padding-right: 0%;
}
.large {
    font-size: 88px;
}
.small {
    font-size: 48px;
}
}

/* Tablet Styles */
@media (min-width: 401px) and (max-width: 960px) {
.responsive-main {
    padding-left: 10%;
    padding-right: 10%;
}
}

/* Desktop Styles */
@media only screen and (min-width: 961px) {
.responsive-main {
    padding-left: 25%;        
    padding-right: 25%;
}
}

